--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
 
+    <!-- favicon -->
+    <link
+      rel="shortcut icon"
+      href="./images/icons/favicon.png"
+      type="image/png"
+    />
+
     <!-- css link  -->
     <link rel="stylesheet" href="style.css" />
   </head>
