enable form submitting

--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
 
       <div class="message">
         <h2 class="contact-title">Let’s Message me</h2>
-        <form action="">
-          <input type="text" placeholder="Your Name" />
-          <input type="text" placeholder="Your email" />
-          <textarea name="" id="" placeholder="Message"></textarea>
-          <button class="btn">Submit</button>
+        <form action="https://formspree.io/f/mdkzrgrg" method="post">
+          <input type="text" name="Name:" placeholder="Your Name" />
+          <input type="text" name="Email:" placeholder="Your email" />
+          <textarea name="Message:" id="" placeholder="Message"></textarea>
+          <button type="submit" class="btn">Submit</button>
         </form>
       </div>
     </footer>
